--- a/themes/greatermedia/assets/css/sass/components/_gallery-slider.scss
+++ b/themes/greatermedia/assets/css/sass/components/_gallery-slider.scss
@@ -484,38 +484,41 @@
 }
 
 /* Arrows */
-.slick-next {
-	right: 0;
-}
+.gallery-top {
 
-.slick-prev {
-	left: 0;
-}
-
-.slick-arrow {
-	z-index: 9999;
-	position: absolute;
-	top: 50%;
-	padding: 0;
-	border: 0;
-	background-color: transparent;
-	height: 100px;
-	margin-top: -50px;
-	width: 20px;
-	color: #fff;
-	@include bp(medium) {
-		top: 300px;
-		height: 150px;
-		margin-top: -75px;
-		width: 40px;
-		font-size: 25px;
+	.slick-next {
+		right: 0;
 	}
-	&:hover {
-		background-color: $btn-bg;
-	}
-}
 
-.slick-arrow.slick-disabled {
-	pointer-events: none;
-	opacity: 0;
+	.slick-prev {
+		left: 0;
+	}
+
+	.slick-arrow {
+		z-index: 9999;
+		position: absolute;
+		top: 50%;
+		padding: 0;
+		border: 0;
+		background-color: transparent;
+		height: 100px;
+		margin-top: -50px;
+		width: 20px;
+		color: #fff;
+		@include bp(medium) {
+			top: 300px;
+			height: 150px;
+			margin-top: -75px;
+			width: 40px;
+			font-size: 25px;
+		}
+		&:hover {
+			background-color: $btn-bg;
+		}
+	}
+
+	.slick-arrow.slick-disabled {
+		pointer-events: none;
+		opacity: 0;
+	}
 }
