--- a/themes/greatermedia/assets/css/sass/greater_media.scss
+++ b/themes/greatermedia/assets/css/sass/greater_media.scss
@@ -84,6 +84,7 @@
 @import "components/adblock";
 @import "components/livefyre-comments";
 @import "components/livefyre-mediawall";
+@import "components/livestream-oembed";
 @import "components/related-posts";
 @import "components/404";
 @import "components/mobile-podcasts";
