--- a/themes/greatermedia/assets/css/sass/components/_gallery-slider.scss
+++ b/themes/greatermedia/assets/css/sass/components/_gallery-slider.scss
@@ -280,6 +280,15 @@
 	.slick-slide {
 		opacity: .3;
 		transition: 300ms all ease-in-out;
+		position: relative;
+	}
+	.image-attribution {
+	    	background-color: rgba(0, 0, 0, 0.5);
+    		color: white;
+		padding: 5px 10px;
+		position: absolute;
+		right: 0;
+		bottom: 0;
 	}
 	.slick-slide.slick-current {
 		opacity: 1;
