Added CTA message

--- a/themes/greatermedia/assets/css/sass/components/_gallery.scss
+++ b/themes/greatermedia/assets/css/sass/components/_gallery.scss
@@ -1223,3 +1223,8 @@ a.gallery__back--btn {
 	text-align: center;
 	padding-top: 25%;
 }
+
+.gallery__embed--cta {
+	display: block;
+	text-align: center;
+}
