--- a/themes/greatermedia/assets/css/sass/components/_gallery.scss
+++ b/themes/greatermedia/assets/css/sass/components/_gallery.scss
@@ -1205,8 +1205,22 @@ a.gallery__back--btn {
 }
 
 .gallery__embed--thumbnail {
-	max-width: 20%;
+	width: 20%;
 	position: relative;
+	&:after {
+		content: "";
+		display: block;
+		padding-bottom: 73.6%;
+		width: 100%;
+	}
+	img {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+	}
 }
 
 .gallery__embed--more {
