Updated background image

--- a/themes/wrxk-hd2/assets/css/sass/light-theme/base/_overrides.scss
+++ b/themes/wrxk-hd2/assets/css/sass/light-theme/base/_overrides.scss
@@ -17,7 +17,7 @@ a:hover .highlights__community--title
 @include bp(large) {
 
     .main {
-        background-image: url("../../images/wrxkhd2-wallpaper-2017.jpg");
+        background-image: url("../../images/PLAYA-Y-ARENA-JUNE2018-bg.png");
         background-position: top center;
         background-repeat: no-repeat;
 				background-color: #000000;
