Updated background image

--- a/themes/wrxk-hd2/assets/css/sass/light-theme/base/_overrides.scss
+++ b/themes/wrxk-hd2/assets/css/sass/light-theme/base/_overrides.scss
@@ -16,7 +16,7 @@ a:hover .highlights__community--title
 
 @include bp(large) {
     .main {
-        background-image: url("../../images/PLAYA-Y-ARENA-JUNE2018-bg.png");
+        background-image: url("../../images/PLAYA-Y-ARENA-3NAPLESPIER-JUNE2018.jpg");
         background-position: top center;
         background-repeat: no-repeat;
 		background-color: #005dac;
