--- a/themes/kdwn/assets/css/sass/light-theme/base/_overrides.scss
+++ b/themes/kdwn/assets/css/sass/light-theme/base/_overrides.scss
@@ -14,13 +14,12 @@ a:hover .highlights__community--title {
 }
 
 @include bp(large) {
-    .main {
-        background-image: url("../../images/KDWN-SKIN-RESIZE-V2.jpg");
-        background-position: center center;
-		background-size: cover;
-		background-repeat: no-repeat;
+	.main {
 		background-attachment: fixed;
-    }
+		background-image: url("../../images/KDWN-SKIN-RESIZE-V2.jpg");
+		background-position: top center;
+		background-repeat: no-repeat;
+	}
 }
 
 .audio-more {
