Darkens thefanatic gallery bg

--- a/themes/thefanatic/assets/css/sass/thefanatic.scss
+++ b/themes/thefanatic/assets/css/sass/thefanatic.scss
@@ -34,5 +34,6 @@
 @import "components/livefyre-apps";
 @import "components/shows";
 @import "components/gallery";
+@import "components/gallery-slider";
 @import "components/contests";
 @import "components/404";
