Makes thefanatic gallery bg darker, download link white

--- a/themes/thefanatic/assets/css/sass/components/_gallery-slider.scss
+++ b/themes/thefanatic/assets/css/sass/components/_gallery-slider.scss
@@ -3,11 +3,12 @@
 }
 /* Sidebar */
 .swiper-sidebar {
-	background: rgba(darken($gallery-bg, 30%),.7);
+	background: rgba(0,0,0,.7);
 	color: $gallery-text;
 
 	#js-swiper-sidebar-title,
-	#js-swiper-sidebar-caption {
+	#js-swiper-sidebar-caption,
+	#js-swiper-sidebar-download {
 		color: $gallery-text;
 	}
 }
