--- a/themes/greatermedia/assets/css/sass/components/_gallery-slider.scss
+++ b/themes/greatermedia/assets/css/sass/components/_gallery-slider.scss
@@ -514,12 +514,15 @@
 		top: 50%;
 		padding: 0;
 		border: 0;
-		background-color: transparent;
+		background-color: $btn-bg;
 		height: 100px;
 		margin-top: -50px;
-		width: 20px;
+		width: 30px;
 		color: #fff;
+		font-size: 20px;
+
 		@include bp(medium) {
+			background-color: transparent;
 			top: 300px;
 			height: 150px;
 			margin-top: -75px;
