--- a/themes/greatermedia/assets/css/sass/base/_grid.scss
+++ b/themes/greatermedia/assets/css/sass/base/_grid.scss
@@ -65,10 +65,15 @@ img {
 	background-color: $primary-bg;
 	position: relative;
 	display: flex;
+	flex-direction: column;
 
 	@include bp(medium) {
 		//margin-top: 40px;
 		padding: 20px;
+	}
+
+	@include bp(large) {
+		flex-direction: row;
 	}
 }
 
@@ -85,7 +90,7 @@ img {
 	width: 100%;
 	min-width: 300px;
 
-	@include bp(medium) {
+	@include bp(large) {
 		width: 300px;
 		margin-right: $gutter * 2;
 	}
@@ -131,6 +136,11 @@ img {
 
 	.social__link {
 		margin: 0 5px;
+	}
+
+	.gmr-ad iframe {
+		display: block;
+		margin: 0 auto;
 	}
 }
 
