--- a/themes/greatermedia/assets/css/sass/base/_grid.scss
+++ b/themes/greatermedia/assets/css/sass/base/_grid.scss
@@ -173,6 +173,18 @@ img {
 	}
 }
 
+.jacapps {
+	.main > .container {
+		@include bp(large) {
+			padding-right: 20px;
+		}
+	}
+
+	.main > .container > .sidebar {
+		display: none;
+	}
+}
+
 .row {
 	@include row();
 }
