Updated header image

--- a/themes/wbqt/assets/css/sass/light-theme/base/_overrides.scss
+++ b/themes/wbqt/assets/css/sass/light-theme/base/_overrides.scss
@@ -73,7 +73,7 @@
 }
 .header__main.headroom {
     background-color: #585858!important;
-		background-image: url(../../images/hotheader.jpg)!important;
+		background-image: url(../../images/09_24_2018_Website_Header_min.jpg) !important;
 		background-position: top center!important;
 		background-repeat: no-repeat!important;
 		background-size: contain;
