Adjust audio volume specificity.

--- a/themes/wrif/assets/css/sass/light-theme/base/_overrides.scss
+++ b/themes/wrif/assets/css/sass/light-theme/base/_overrides.scss
@@ -510,7 +510,7 @@ color: #ffffff;
 {background-color: #D22228!important;}
 
 
-.audio-volume .audio-volume__btn, .audio-volume .audio-volume__mute button, .audio-volume .audio-volume__mute input, .audio-volume .audio-volume__mute optgroup, .audio-volume .audio-volume__mute select, .audio-volume .audio-volume__mute textarea
+.audio-volume .audio-volume__btn, .audio-volume button, .audio-volume input, .audio-volume optgroup, .audio-volume select, .audio-volume textarea
 {color: #ffffff!important;}
 
 .audio-expand
