--- a/themes/wbos-alt929boston/assets/css/sass/light-theme/base/_overrides.scss
+++ b/themes/wbos-alt929boston/assets/css/sass/light-theme/base/_overrides.scss
@@ -142,7 +142,7 @@ input[type=range]::-ms-thumb {
 .audio-playing .audio-playing__track {
     color: #ffffff;
 }
-.audio-interface button, input, optgroup, select, textarea {
+.audio-interface button, .audio-interface input, .audio-interface optgroup, .audio-interface select, .audio-interface textarea {
     color: #ffffff;
 }
 .audio-controls__loading:hover, .audio-controls__pause:hover, .audio-controls__play:hover, .audio-controls__resume:hover {
@@ -167,7 +167,7 @@ input[type=range]::-ms-thumb {
 .audio-stream .audio-stream__link:hover {
     background-color: #D22228;
 }
-.audio-volume .audio-volume__btn, .audio-volume .audio-volume__mute button, input, optgroup, select, textarea {
+.audio-volume .audio-volume__btn, .audio-volume .audio-volume__mute button, .audio-volume input, .audio-volume optgroup, .audio-volume select, .audio-volume textarea {
     color: #ffffff;
 }
 .audio-expand {
