--- a/themes/experience-engine/assets/styles/base/typography.css
+++ b/themes/experience-engine/assets/styles/base/typography.css
@@ -1,7 +1,10 @@
 body {
 	color: var(--global-theme-font-primary);
 	font-family: var(--global-font-family-primary);
+	font-size: 18px;
 	font-weight: 300;
+	line-height: 1.4;
+	margin: 0;
 }
 
 body,
@@ -11,7 +14,6 @@ select,
 textarea {
 	line-height: 1.4;
 }
-
 
 h1,
 h2,
@@ -23,16 +25,43 @@ h6 {
 	line-height: 1.1;
 }
 
-h1 {
-	font-weight: 700;
-}
-
 h2,
 h3,
 h4,
 h5,
 h6 {
 	font-weight: 600;
+}
+
+h1 {
+	font-size: 2.78rem;
+	font-weight: 700;
+	line-height: 1.28;
+}
+
+h2 {
+	font-size: 1.8889rem;
+	line-height: 1.353;
+}
+
+h3 {
+	font-size: 1.4444rem;
+	line-height: 1.308;
+}
+
+h4 {
+	font-size: 1.2222222rem;
+	line-height: 1.3636;
+}
+
+h5 {
+	font-size: 1.11111rem;
+	line-height: 1.3;
+}
+
+h6 {
+	font-size: 1rem;
+	line-height: 1.33333;
 }
 
 a {
@@ -47,6 +76,7 @@ a {
 }
 
 p {
+	font-weight: 100;
 	margin: 0 0 2em 0;
 }
 
