--- a/themes/experience-engine/assets/styles/components/live-player.css
+++ b/themes/experience-engine/assets/styles/components/live-player.css
@@ -8,22 +8,22 @@
 	padding: 20px;
 }
 
-#live-player .play-btn,
-#live-player .pause-btn,
-#live-player .resume-btn,
-#live-player .loading-btn {
+.play-btn,
+.pause-btn,
+.resume-btn,
+.loading-btn {
 	display: none;
 }
 
-#live-player .LIVE_PAUSE .resume-btn,
-#live-player .LIVE_PLAYING .pause-btn,
-#live-player .LIVE_STOP .play-btn,
-#live-player .LIVE_FAILED .play-btn,
-#live-player .LIVE_BUFFERING .loading-btn,
-#live-player .LIVE_CONNECTING .loading-btn,
-#live-player .LIVE_RECONNECTING .loading-btn,
-#live-player .STREAM_GEO_BLOCKED .play-btn,
-#live-player .STATION_NOT_FOUND .play-btn {
+.LIVE_PAUSE .resume-btn,
+.LIVE_PLAYING .pause-btn,
+.LIVE_STOP .play-btn,
+.LIVE_FAILED .play-btn,
+.LIVE_BUFFERING .loading-btn,
+.LIVE_CONNECTING .loading-btn,
+.LIVE_RECONNECTING .loading-btn,
+.STREAM_GEO_BLOCKED .play-btn,
+.STATION_NOT_FOUND .play-btn {
 	display: block;
 }
 
