Add temporary brand colors for testing.

--- a/themes/experience-engine/assets/styles/global/variables.css
+++ b/themes/experience-engine/assets/styles/global/variables.css
@@ -8,9 +8,9 @@
 
 	--global-font-family-primary: 'Libre Franklin', sans-serif;
 
-	--brand-primary: #000;
-	--brand-secondary: #000;
-	--brand-tertiary: #000;
+	--brand-primary: #ff0000;
+	--brand-secondary: #ffe964;
+	--brand-tertiary: #ffffff;
 }
 
 .-dark {
