--- a/themes/experience-engine/assets/styles/main.css
+++ b/themes/experience-engine/assets/styles/main.css
@@ -6,4 +6,5 @@
 @import 'components/modal';
 @import 'components/live-player';
 @import 'components/podcast';
-
+@import 'components/loading';
+@import 'components/lazy-image';
