Add custom media query.

--- a/themes/experience-engine/assets/styles/global/variables.css
+++ b/themes/experience-engine/assets/styles/global/variables.css
@@ -30,3 +30,5 @@
 	--global-theme-font-secondary: #202124;
 	--global-theme-font-tertiary: var(--global-dove-gray);
 }
+
+@custom-media --medium-viewport (min-width: 768px);
