--- a/themes/experience-engine/assets/styles/components/navigation/primary-nav.css
+++ b/themes/experience-engine/assets/styles/components/navigation/primary-nav.css
@@ -1,30 +1,37 @@
 .primary-nav {
 	background-color: var(--global-theme-secondary);
+	box-shadow: 1px 0 3px rgba(0, 0, 0, 0.08);
 	height: calc(100vh - 86px);
 	left: 0;
-	max-width: 190px;
+	max-width: 82.6667vw;
 	overflow: auto;
-	padding: 0 1.1rem;
+	padding: 3.5rem 1.1rem 0;
 	position: fixed;
-	top: 86px;
+	top: 0;
 	width: 100%;
 
-	&[aria-hidden="true"] {
-		width: 0;
-	}
-
-	&[aria-hidden="false"],
-	&:target {
-		display: block;
-	}
-
-	@media ( min-width: 768px ) {
+	@media (--medium-viewport) {
+		box-shadow: none;
 		display: block;
 		height: auto;
 		position: static;
 		padding: 0;
 		top: 0;
 		width: auto;
+	}
+
+	@nest .admin-bar & {
+		top: 46px;
+	}
+
+	&[aria-hidden="true"] {
+		padding: 0;
+		width: 0;
+	}
+
+	&[aria-hidden="false"],
+	&:target {
+		display: block;
 	}
 
 	& ul {
@@ -44,22 +51,35 @@
 	& .menu-item-has-children {
 		position: relative;
 
-		&:after {
-			content: '';
+		& .sub-menu-activator {
+			background: none;
+			border: none;
 			border-bottom: 2px solid var(--brand-secondary);
 			border-right: 2px solid var(--brand-secondary);
+			cursor: pointer;
 			height: 8px;
+			margin: 1rem 1rem 0 0;
+			padding: 0;
 			position: absolute;
 			right: 0;
 			top: 0;
-			transform: rotate(45deg) translateY(calc(50% + 1rem)) scale(1);
+			transform: rotate(45deg);
 			transform-origin: 50%;
+			transition: transform 300ms ease;
 			width: 8px;
+
+			&.is-active {
+				transform: rotate(-135deg);
+			}
 		}
 	}
 
 	& .sub-menu {
 		display: none;
+
+		&.is-active {
+			display: block;
+		}
 
 		& a {
 			color: var(--global-theme-font-secondary);
