--- a/themes/experience-engine/assets/styles/components/navigation/primary-sidebar.css
+++ b/themes/experience-engine/assets/styles/components/navigation/primary-sidebar.css
@@ -1,12 +1,18 @@
 .primary-sidebar {
 	align-items: center;
 	background-color: var(--global-theme-secondary);
+	box-shadow: 1px 0 3px rgba(0, 0, 0, 0.08);
 	display: flex;
+	overflow: auto;
 	padding: .75rem 1.1rem;
 
-	@media (min-width: 768px) {
+	@media (--medium-viewport) {
 		display: block;
-		height: 100vh;
+		position: absolute;
+		top: 0;
+		bottom: 74px;
+		height: 100%;
+		min-height: calc(100vh - 74px); /*74px is the height of the live player.*/
 		max-width: 190px;
 		padding: 2.1rem 1.1rem;
 	}
@@ -14,7 +20,7 @@
 	& .logo {
 		margin: 0 auto;
 
-		@media (min-width: 768px) {
+		@media (--medium-viewport) {
 			margin: 0;
 		}
 
@@ -22,7 +28,7 @@
 			max-height: 56px;
 			width: auto;
 
-			@media (min-width: 768px) {
+			@media (--medium-viewport) {
 				max-height: none;
 			}
 		}
@@ -31,17 +37,19 @@
 
 .site-menu-toggle {
 	color: var(--global-theme-font-primary);
-	line-height: 40px;
-	position: absolute;
 	font-size: 20px;
-	text-decoration: none;
+	line-height: 40px;
 	margin-right: 10px;
+	position: absolute;
+	text-decoration: none;
+	z-index: 10;
 
-	@media (min-width: 768px) {
+	@media (--medium-viewport) {
 		display: none;
 	}
 
-	&:hover {
+	&:hover,
+	&:focus {
 		text-decoration: none;
 	}
 }
