Add new stylesheets.

--- a/themes/experience-engine/assets/styles/main.css
+++ b/themes/experience-engine/assets/styles/main.css
@@ -1,10 +1,14 @@
 @import 'global/variables';
 
+@import 'base/normalize';
 @import 'base/a11y';
 @import 'base/typography';
+@import 'base/container';
 
 @import 'components/navigation/primary-sidebar';
+@import 'components/navigation/search-form';
 @import 'components/navigation/primary-nav';
+@import 'components/navigation/user-nav';
 
 @import 'components/nprogress';
 @import 'components/modal';
