Add styles to ensure that the logo is centered within the navigation when the navigation is active on mobile.

--- a/themes/experience-engine/assets/styles/components/navigation/primary-sidebar.css
+++ b/themes/experience-engine/assets/styles/components/navigation/primary-sidebar.css
@@ -19,6 +19,7 @@
 
 	& .logo {
 		margin: 0 auto;
+		z-index: 5;
 
 		@media (--medium-viewport) {
 			margin: 0;
@@ -31,6 +32,15 @@
 			@media (--medium-viewport) {
 				max-height: none;
 			}
+		}
+	}
+
+	&.menu-is-active {
+		& .logo {
+			display: flex;
+			justify-content: center;
+			margin: 0;
+			width: calc(82.6667vw - 2.2rem);
 		}
 	}
 }
