Add animation for the hamburger nav and transition to close icon when active.

--- a/themes/experience-engine/assets/styles/components/navigation/primary-sidebar.css
+++ b/themes/experience-engine/assets/styles/components/navigation/primary-sidebar.css
@@ -42,6 +42,21 @@
 			margin: 0;
 			width: calc(82.6667vw - 2.2rem);
 		}
+
+		& .site-menu-toggle {
+			& svg {
+				transform: rotate(45deg);
+				& path {
+					&:first-of-type {
+						stroke-dashoffset: -98px;
+					}
+
+					&:last-of-type {
+						stroke-dashoffset: -138px;
+					}
+				}
+			}
+		}
 	}
 }
 
@@ -61,5 +76,30 @@
 	&:hover,
 	&:focus {
 		text-decoration: none;
+
+		& svg {
+			& path {
+				stroke: var(--global-theme-font-secondary);
+			}
+		}
+	}
+
+	& svg {
+		transition: transform 400ms;
+
+		& path {
+			fill: none;
+			transition: stroke 400ms, stroke-dasharray 400ms, stroke-dashoffset 400ms;
+			stroke: currentcolor;
+			stroke-width:3.5;
+			stroke-linecap:round;
+
+			&:first-of-type {
+				stroke-dasharray: 40 139;
+			}
+			&:last-of-type {
+				stroke-dasharray: 40 180;
+			}
+		}
 	}
 }
