--- a/themes/experience-engine/assets/styles/components/nprogress.css
+++ b/themes/experience-engine/assets/styles/components/nprogress.css
@@ -1,5 +1,20 @@
 @import 'nprogress/nprogress.css';
 
+#nprogress {
+	& .bar {
+		background-color: var(--brand-primary);
+	}
+
+	& .spinner-icon {
+		border-top-color: var(--brand-primary);
+		border-left-color: var(--brand-primary);
+	}
+
+	& .peg {
+		box-shadow: 0 0 10px var(--brand-primary), 0 0 5px var(--brand-primary);
+	}
+}
+
 body.admin-bar #nprogress .bar {
 	top: 32px;
 }
