--- a/themes/experience-engine/assets/styles/components/modal.css
+++ b/themes/experience-engine/assets/styles/components/modal.css
@@ -1,19 +1,20 @@
 .modal {
-	position: fixed;
-	left: 0;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	z-index: 9999;
 	background-color: rgba(0, 0, 0, .65);
+	bottom: 0;
+	left: 0;
+	position: fixed;
+	right: 0;
+	top: 0;
+	z-index: 9999;
 }
 
 .modal-content {
-	position: absolute;
-	left: 50%;
-	top: 50%;
 	background-color: rgb(255, 255, 255);
+	left: 50%;
 	padding: 20px;
+	position: absolute;
+	top: 50%;
+	transform: translate(-50%, -50%);
 }
 
 .modal-close {
@@ -23,7 +24,7 @@
 }
 
 .modal-header {
-	margin-bottom: 10px;
 	font-size: 2em;
 	font-weight: bold;
+	margin-bottom: 10px;
 }
