Updated episodes to not use placeholders when in jacapps app

--- a/themes/experience-engine/assets/styles/components/live-player.css
+++ b/themes/experience-engine/assets/styles/components/live-player.css
@@ -50,3 +50,10 @@
 iframe[src^="https://omny.fm"] {
 	display: none;
 }
+
+.jacapps {
+	& .wp-audio-shortcode,
+	& iframe[src^="https://omny.fm"] {
+		display: block;
+	}
+}
