--- a/themes/experience-engine/assets/styles/components/live-player.css
+++ b/themes/experience-engine/assets/styles/components/live-player.css
@@ -41,6 +41,38 @@
 	margin: 0 10px;
 }
 
+.preroll-wrapper {
+	background-color: rgba(0, 0, 0, .75);
+	display: none;
+	height: 100%;
+	left: 0;
+	position: fixed;
+	top: 0;
+	width: 100%;
+	z-index: 20000;
+
+	&.-active {
+		display: block;
+	}
+}
+
+.preroll-container {
+	left: 50%;
+	position: absolute;
+	top: 50%;
+	transform: translate(-50%, -50%);
+}
+
+.preroll-player {
+	background-color: #000;
+	width: 640px;
+	margin-top: 256px;
+}
+
+.preroll-notification {
+
+}
+
 .controls {
 	display: flex;
 	justify-content: space-around;
