--- a/themes/experience-engine/assets/styles/components/live-player.css
+++ b/themes/experience-engine/assets/styles/components/live-player.css
@@ -50,7 +50,7 @@
 	position: fixed;
 	top: 0;
 	width: 100%;
-	z-index: 20000;
+	z-index: 100;
 
 	&.-active {
 		display: block;
@@ -65,7 +65,7 @@
 }
 
 .preroll-player {
-	background-color: #000;
+	background-color: var(--color-black);
 	width: 640px;
 }
 
