Adjust margins and padding for typograph and containers. Adds partial for buttons.

--- a/themes/experience-engine/assets/styles/base/container.css
+++ b/themes/experience-engine/assets/styles/base/container.css
@@ -5,6 +5,8 @@ body {
 }
 
 .container {
+	padding-bottom: 74px; /*height of the fixed player*/
+
 	@media(--medium-viewport) {
 		padding-left: 190px;
 	}
