--- a/themes/experience-engine/assets/styles/main.css
+++ b/themes/experience-engine/assets/styles/main.css
@@ -3,12 +3,15 @@
 @import 'base/normalize';
 @import 'base/a11y';
 @import 'base/typography';
+@import 'base/buttons';
 @import 'base/container';
 
 @import 'components/navigation/primary-sidebar';
 @import 'components/navigation/search-form';
 @import 'components/navigation/primary-nav';
 @import 'components/navigation/user-nav';
+
+@import 'components/footer/footer';
 
 @import 'components/archive/tile';
 @import 'components/archive/tile-podcast';
