--- a/themes/experience-engine/assets/styles/components/archive/tile-episode.css
+++ b/themes/experience-engine/assets/styles/components/archive/tile-episode.css
@@ -29,3 +29,14 @@
 		}
 	}
 }
+
+.single-show {
+	& .archive-tiles {
+		& .type-episode::after {
+			color: var(--global-theme-primary);
+			content: "[i] podcast";
+			display: block;
+			margin-top: .5rem;
+		}
+	}
+}
