--- a/themes/experience-engine/assets/styles/components/live-player.css
+++ b/themes/experience-engine/assets/styles/components/live-player.css
@@ -89,3 +89,8 @@ iframe[src^="https://omny.fm"] {
 		display: block;
 	}
 }
+
+.offline-title {
+	color: var(--global-theme-font-primary);
+	font-weight: 600;
+}
