Add styles for the single episode information component. Also adjusts some styles for the footer and live player to be a bit more generic.

--- a/themes/experience-engine/assets/styles/components/footer/footer.css
+++ b/themes/experience-engine/assets/styles/components/footer/footer.css
@@ -1,5 +1,6 @@
 .footer {
 	background-color: var(--global-theme-primary);
+	color: var(--global-theme-font-primary);
 	padding: 2.7222rem 2.222rem;
 
 	& .custom-logo-link {
