Adjust custom media variables across files. Adds responsive considerations to the episode info component.

--- a/themes/experience-engine/assets/styles/base/container.css
+++ b/themes/experience-engine/assets/styles/base/container.css
@@ -7,7 +7,7 @@ body {
 .container {
 	padding-bottom: 74px; /*height of the fixed player*/
 
-	@media(--medium-viewport) {
+	@media(--min-medium-viewport) {
 		padding-left: 190px;
 	}
 }
