--- a/themes/experience-engine/assets/styles/components/episode/episode-info.css
+++ b/themes/experience-engine/assets/styles/components/episode/episode-info.css
@@ -20,26 +20,47 @@
 	& .show-meta {
 		align-items: center;
 		display: flex;
+		flex-wrap: wrap;
+		justify-content: center;
 		padding-bottom: 1.72rem;
+
+		@media (--min-small-viewport) {
+			flex-wrap: nowrap;
+			justify-content: flex-start;
+		}
 
 		& .show {
 			color: var(--brand-primary);
+			flex: 0 1 100%;
 			font-size: .889rem;
 			font-weight: 600;
 			line-height: 1;
-			margin-bottom: 0;
-			text-transform: uppercase
+			margin-bottom: 1rem;
+			text-transform: uppercase;
+
+			@media (--min-small-viewport) {
+				margin-bottom: 0;
+				flex: 0 1 auto;
+			}
 		}
 
 		& button {
 			color: var(--global-font-primary);
+			flex: 0 1 100%;
+
+			@media (--min-small-viewport) {
+				flex: 0 1 auto;
+			}
 		}
 
 		& > * {
 			float: left;
 
 			&:not(:first-child) {
-				padding-left: 1rem;
+
+				@media (--min-small-viewport) {
+					padding-left: 1rem;
+				}
 			}
 		}
 	}
@@ -51,14 +72,15 @@
 		justify-content: center;
 		padding-bottom: 1.61rem;
 
-		@media (--small-viewport) {
+		@media (--min-small-viewport) {
 			flex-wrap: nowrap;
+			justify-content: flex-start;
 		}
 
 		& > div {
 			padding-bottom: 1.72rem;
 
-			@media (--small-viewport) {
+			@media (--min-small-viewport) {
 				padding-bottom: 0;
 			}
 		}
@@ -66,7 +88,7 @@
 		& h1 {
 			margin-bottom: 0;
 
-			@media (--small-viewport) {
+			@media (--min-small-viewport) {
 				padding-left: 2.78rem;
 			}
 
@@ -88,7 +110,7 @@
 		flex-wrap: wrap;
 		font-size: .833rem;
 
-		@media (--small-viewport) {
+		@media (--min-small-viewport) {
 			flex-wrap: nowrap;
 		}
 
@@ -96,13 +118,13 @@
 			flex: 0 1 100%;
 			padding: 0 0 1rem;
 
-			@media (--small-viewport) {
+			@media (--min-small-viewport) {
 				flex: 0 1 auto;
 			}
 		}
 
 		& > *:not(:first-child) {
-			@media (--small-viewport) {
+			@media (--min-small-viewport) {
 				padding-left: 2.78rem;
 			}
 		}
@@ -111,7 +133,7 @@
 			font-weight: 600;
 			width: 117px;
 
-			@media (--small-viewport) {
+			@media (--min-small-viewport) {
 				text-align: center;
 			}
 		}
@@ -119,7 +141,7 @@
 		& .btn {
 			text-align: left;
 
-			@media (--small-viewport) {
+			@media (--min-small-viewport) {
 				text-align: center;
 			}
 		}
