--- a/themes/experience-engine/assets/styles/base/typography.css
+++ b/themes/experience-engine/assets/styles/base/typography.css
@@ -27,17 +27,25 @@ h6 {
 	margin-top: 0;
 }
 
+h1,
 h2,
-h3,
+h3 {
+	font-weight: 700;
+
+	& > a {
+		font-weight: 700;
+	}
+}
+
 h4,
 h5,
 h6 {
 	font-weight: 600;
 }
 
+
 h1 {
 	font-size: 2.78rem;
-	font-weight: 700;
 	line-height: 1.28;
 }
 
