--- a/themes/experience-engine/assets/styles/global/variables.css
+++ b/themes/experience-engine/assets/styles/global/variables.css
@@ -2,6 +2,7 @@
 	--global-black: #000000;
 	--global-dove-gray: #737373;
 	--global-silver: #cccbcb;
+	--global-silver-chalice: #afafaf;
 	--global-white: #ffffff;
 
 	--global-alert: #ff0000;
