--- a/themes/experience-engine/assets/styles/main.css
+++ b/themes/experience-engine/assets/styles/main.css
@@ -6,6 +6,8 @@
 @import 'base/buttons';
 @import 'base/container';
 
+@import 'components/section/section-header';
+
 @import 'components/navigation/primary-sidebar';
 @import 'components/navigation/search-form';
 @import 'components/navigation/primary-nav';
@@ -23,11 +25,11 @@
 
 @import 'components/episode/episode-info';
 @import 'components/episode/episode-content';
+@import 'components/episode/episode-tile';
 
 @import 'components/nprogress';
 @import 'components/modal';
 @import 'components/loading';
 @import 'components/lazy-image';
-@import 'components/episode';
 
 @import 'utilities/display';
