--- a/themes/experience-engine/assets/styles/global/variables.css
+++ b/themes/experience-engine/assets/styles/global/variables.css
@@ -34,5 +34,6 @@
 	--global-theme-font-tertiary: var(--global-dove-gray);
 }
 
+@custom-media --min-large-viewport (min-width: 900px);
 @custom-media --min-medium-viewport (min-width: 768px);
 @custom-media --min-small-viewport (min-width: 480px);
