--- a/themes/experience-engine/assets/styles/components/episode/episode-content.css
+++ b/themes/experience-engine/assets/styles/components/episode/episode-content.css
@@ -1,11 +1,46 @@
+/* Grid Fallbacks */
+.episode-content {
+	display: flex;
+	flex-wrap: wrap;
+
+	& .episodes {
+		flex: 0 1 auto;
+		padding-right: 20px;
+	}
+
+	& .ad {
+		flex: 0 1 auto;
+		max-width: 600px;
+	}
+}
+/* End Grid Fallbacks */
+
 .episode-content {
 	margin: 0 auto;
 	max-width: 1071px;
 	padding: 0 1rem 2.22rem;
 
+	@media (--min-large-viewport) {
+		display: grid;
+		grid-column-gap: 2.333rem;
+		grid-row-gap: 2.889rem;
+		grid-template-columns: auto 300px;
+		grid-template-rows: repeat(2, auto);
+	}
+
 	& .description {
+		grid-column: 1;
 		& p {
 			line-height: 1.6;
 		}
+	}
+
+	& .episodes {
+		grid-column: 1;
+	}
+
+	& .ad {
+		grid-column: 2;
+		grid-row: 1 / -1;
 	}
 }
