Updated video embed to load video scripts on demand

--- a/themes/experience-engine/assets/styles/main.css
+++ b/themes/experience-engine/assets/styles/main.css
@@ -36,6 +36,6 @@
 @import 'components/modal';
 @import 'components/loading';
 @import 'components/lazy-image';
-
+@import 'components/videojs';
 
 @import 'utilities/display';
