Add new partials for footer and leaderboard ads.

--- a/themes/experience-engine/assets/styles/global/variables.css
+++ b/themes/experience-engine/assets/styles/global/variables.css
@@ -3,6 +3,7 @@
 	--global-dove-gray: #737373;
 	--global-silver: #cccbcb;
 	--global-silver-chalice: #afafaf;
+	--global-gallery: #f0f0f0;
 	--global-white: #ffffff;
 
 	--global-alert: #ff0000;
