--- a/themes/experience-engine/assets/styles/main.css
+++ b/themes/experience-engine/assets/styles/main.css
@@ -26,7 +26,7 @@
 @import 'components/show/show-header';
 @import 'components/show/show-information';
 @import 'components/show/show-navigation';
-
+@import 'components/show/show-tile';
 
 @import 'components/podcast/podcast-tile';
 
@@ -43,5 +43,7 @@
 @import 'components/loading';
 @import 'components/lazy-image';
 @import 'components/videojs';
+
+@import 'components/post';
 
 @import 'utilities/display';
