Changed px to rem

--- a/themes/experience-engine/assets/styles/components/show/show-tile.css
+++ b/themes/experience-engine/assets/styles/components/show/show-tile.css
@@ -10,7 +10,7 @@
     }
 
     & .show-time {
-        font-size: 16px;
+        font-size: 1rem;
         color: var(--global-font-secondary);
         font-weight: 500;
     }
