Refactored code to align with previously set out structure

--- a/themes/experience-engine/assets/styles/main.css
+++ b/themes/experience-engine/assets/styles/main.css
@@ -17,6 +17,7 @@
 
 @import 'components/archive/archive-title';
 @import 'components/archive/archive-tile';
+@import 'components/archive/archive-post-tile';
 @import 'components/archive/tile-episode';
 @import 'components/archive/tile-gmr_gallery';
 
@@ -34,7 +35,6 @@
 @import 'components/episode/episode-content';
 @import 'components/episode/episode-tile';
 
-
 @import 'components/ads/ad-title';
 @import 'components/ads/ad';
 
@@ -43,7 +43,5 @@
 @import 'components/loading';
 @import 'components/lazy-image';
 @import 'components/videojs';
-
-@import 'components/post';
 
 @import 'utilities/display';
