Styled load more button

--- a/themes/experience-engine/assets/styles/main.css
+++ b/themes/experience-engine/assets/styles/main.css
@@ -43,5 +43,6 @@
 @import 'components/loading';
 @import 'components/lazy-image';
 @import 'components/videojs';
+@import 'components/load-more-button';
 
 @import 'utilities/display';
