Styles for Contest Archive page

--- a/themes/experience-engine/assets/styles/main.css
+++ b/themes/experience-engine/assets/styles/main.css
@@ -29,6 +29,8 @@
 @import 'components/show/show-navigation';
 @import 'components/show/show-tile';
 
+@import 'components/contest/contest-tile';
+
 @import 'components/podcast/podcast-tile';
 
 @import 'components/episode/episode-info';
