--- a/themes/experience-engine/assets/styles/components/archive/archive-tile.css
+++ b/themes/experience-engine/assets/styles/components/archive/archive-tile.css
@@ -55,24 +55,11 @@
 				}
 			}
 		}
-
-	& [class*="-tile"] {
-		flex-wrap: wrap;
-	}
-
-	& .post-thumbnail {
-		flex: 0 1 100%;
-		margin-bottom: 1rem;
-	}
-
-		& .meta,
-		& .post-thumbnail {
-			padding-left: 0;
-		}
 	}
 
 	&.-carousel {
-		flex-wrap: nowrap;
+		align-items: flex-start;
+		display: flex;
 		left: 0;
 		overflow: auto;
 		padding-right: 4rem;
@@ -87,6 +74,7 @@
 
 		& > div {
 			flex: 1 0 calc(50% - 1.5rem);
+			margin-right: 1.5rem;
 			max-width: calc(50% - 1.5rem);
 
 			@media (--min-large-viewport) {
@@ -94,9 +82,23 @@
 				max-width: calc(25% - 1.5rem);
 			}
 		}
+	}
 
+	&.-small,
+	&.-large {
 		& [class*="-tile"] {
+			flex-wrap: wrap;
 			padding-bottom: 0;
+		}
+
+		& .post-thumbnail {
+			flex: 0 1 100%;
+			margin-bottom: 1rem;
+		}
+
+		& .meta,
+		& .post-thumbnail {
+			padding-left: 0;
 		}
 
 		& .placeholder-audio {
@@ -108,6 +110,27 @@
 			& .status button {
 				background-color: var(--brand-tertiary);
 				border-color: var(--brand-tertiary);
+			}
+		}
+	}
+
+	&.-small {
+		& > div {
+			flex: 1 0 calc(60% - 1.5rem);
+			max-width: calc(60% - 1.5rem);
+
+			@media (--min-small-viewport) {
+				flex: 1 0 calc(50% - 1.5rem);
+				max-width: calc(50% - 1.5rem);
+			}
+
+			@media (--min-large-viewport) {
+				flex: 0 1 calc(25% - 1.5rem);
+				max-width: calc(25% - 1.5rem);
+			}
+
+			&:not(:last-child) {
+				margin-right: 1.5rem;
 			}
 		}
 	}
