--- a/themes/experience-engine/assets/styles/main.css
+++ b/themes/experience-engine/assets/styles/main.css
@@ -21,7 +21,7 @@
 @import 'components/archive/tile-episode';
 @import 'components/archive/tile-gmr_gallery';
 
-@import 'components/player/preroll';
+@import 'components/player/ads';
 @import 'components/player/controls';
 @import 'components/player/live-player';
 
